fix group links too high

--- a/client/src/app/standings/standings.component.css
+++ b/client/src/app/standings/standings.component.css
@@ -22,7 +22,7 @@ table {
 .mat-row-link{
     position: absolute;
     width: 30%;
-    height: 100%;
+    height: 8%;
 }
 
 .group-link{
